--- a/cloudrun/siivagunnerdb/requirements.txt
+++ b/cloudrun/siivagunnerdb/requirements.txt
@@ -1,11 +1,12 @@
 asgiref==3.3.1
 Django==3.1.13
-pytz==2021.1
-Pillow==8.3.2
-PyMySQL==1.0.2
-gunicorn==20.0.4
-psycopg2-binary==2.8.6
-google-cloud-secret-manager==2.1.0
-google-auth==1.24.0
-django-storages[google]==1.9.1
+djangorestframework==3.11.2
 django-environ==0.4.5
+django-storages[google]==1.9.1
+google-auth==1.24.0
+google-cloud-secret-manager==2.1.0
+gunicorn==20.0.4
+Pillow==8.3.2
+psycopg2-binary==2.8.6
+PyMySQL==1.0.2
+pytz==2021.1
