--- a/cloudrun/siivagunnerdb/cloudbuild.yaml
+++ b/cloudrun/siivagunnerdb/cloudbuild.yaml
@@ -1,16 +1,16 @@
 steps:
 - name: "gcr.io/cloud-builders/docker"
-  args: ["build", "-t", "gcr.io/${PROJECT_ID}/django-cloudrun", "cloudrun/siivagunnerdb"]
+  args: ["build", "-t", "gcr.io/${PROJECT_ID}/${_SERVICE_NAME}", "cloudrun/siivagunnerdb"]
 
 - name: "gcr.io/cloud-builders/docker"
-  args: ["push", "gcr.io/${PROJECT_ID}/django-cloudrun"]
+  args: ["push", "gcr.io/${PROJECT_ID}/${_SERVICE_NAME}"]
 
 - name: "gcr.io/google-appengine/exec-wrapper"
-  args: ["-i", "gcr.io/$PROJECT_ID/django-cloudrun",
+  args: ["-i", "gcr.io/${PROJECT_ID}/${_SERVICE_NAME}",
          "-s", "${PROJECT_ID}:us-central1:myinstance",
          "--", "python", "manage.py", "migrate"]
 
 - name: "gcr.io/google-appengine/exec-wrapper"
-  args: ["-i", "gcr.io/$PROJECT_ID/django-cloudrun",
+  args: ["-i", "gcr.io/${PROJECT_ID}/${_SERVICE_NAME}",
          "-s", "${PROJECT_ID}:us-central1:myinstance",
          "--", "python", "manage.py", "collectstatic", "--no-input"]
