--- a/cloudrun/siivagunnerdb/cloudbuild.yaml
+++ b/cloudrun/siivagunnerdb/cloudbuild.yaml
@@ -8,9 +8,9 @@ steps:
 - name: "gcr.io/google-appengine/exec-wrapper"
   args: ["-i", "gcr.io/${PROJECT_ID}/${_SERVICE_NAME}",
          "-s", "${PROJECT_ID}:us-central1:myinstance",
-         "--", "python", "manage.py", "migrate"]
+         "--", "python", "manage.py", "migrate", "--settings=siivagunnerdb.${_SETTINGS}"]
 
 - name: "gcr.io/google-appengine/exec-wrapper"
   args: ["-i", "gcr.io/${PROJECT_ID}/${_SERVICE_NAME}",
          "-s", "${PROJECT_ID}:us-central1:myinstance",
-         "--", "python", "manage.py", "collectstatic", "--no-input"]
+         "--", "python", "manage.py", "collectstatic", "--no-input", "--settings=siivagunnerdb.${_SETTINGS}"]
