--- a/siivagunnerdb/cloudbuild.yaml
+++ b/siivagunnerdb/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
 - name: "gcr.io/cloud-builders/docker"
-  args: ["build", "-t", "gcr.io/${PROJECT_ID}/${_SERVICE_NAME}", "cloudrun/siivagunnerdb"]
+  args: ["build", "-t", "gcr.io/${PROJECT_ID}/${_SERVICE_NAME}", "siivagunnerdb"]
 
 - name: "gcr.io/cloud-builders/docker"
   args: ["push", "gcr.io/${PROJECT_ID}/${_SERVICE_NAME}"]
