--- a/siivagunnerdb/Dockerfile
+++ b/siivagunnerdb/Dockerfile
@@ -20,6 +20,8 @@ ENV PORT 8080
 # promptly appear in Cloud Logging.
 ENV PYTHONUNBUFFERED TRUE
 
+ENV ENV_NAME dev
+
 # Run the web service on container startup. Here we use the gunicorn
 # webserver, with one worker process and 8 threads.
 # For environments with multiple CPU cores, increase the number of workers
