Add yaml and Dockerfile variables

--- a/siivagunnerdb/Dockerfile
+++ b/siivagunnerdb/Dockerfile
@@ -20,7 +20,8 @@ ENV PORT 8080
 # promptly appear in Cloud Logging.
 ENV PYTHONUNBUFFERED TRUE
 
-ENV ENV_NAME dev
+# Setting the current environment name for use with Django settings.
+ENV ENV_NAME $ENV_NAME
 
 # Run the web service on container startup. Here we use the gunicorn
 # webserver, with one worker process and 8 threads.
