--- a/siivagunnerdb/requirements.txt
+++ b/siivagunnerdb/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.3.1
 Django==3.1.14
 djangorestframework==3.11.2
 django-environ==0.4.5
+django-reversion==5.0.2
 django-storages[google]==1.9.1
 google-auth==1.24.0
 google-cloud-secret-manager==2.1.0
