--- a/siivagunnerdb/requirements.txt
+++ b/siivagunnerdb/requirements.txt
@@ -1,7 +1,8 @@
-asgiref==3.3.1
-Django==3.1.14
+asgiref==3.3.2
+Django==3.2.17
 djangorestframework==3.11.2
 django-environ==0.4.5
+django-filter==22.1
 django-reversion==5.0.2
 django-storages[google]==1.9.1
 google-auth==1.24.0
