--- a/siivagunnerdb/requirements.txt
+++ b/siivagunnerdb/requirements.txt
@@ -1,14 +1,17 @@
-asgiref==3.3.2
+# Core requirements
 Django==3.2.25
 djangorestframework==3.11.2
-django-environ==0.4.5
 django-filter==22.1
 django-reversion==5.0.2
+PyMySQL==1.1.1
+
+# Cloud environment requirements
+asgiref==3.3.2
+django-environ==0.4.5
 django-storages[google]==1.9.1
 google-auth==1.24.0
 google-cloud-secret-manager==2.1.0
 gunicorn==22.0.0
 Pillow==10.3.0
 psycopg2-binary==2.8.6
-PyMySQL==1.1.1
 pytz==2021.1
